<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/oranzova">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabBeerMatch"
            android:text="@string/tab_beer_player"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabBeerPlayer"
            android:text="@string/tab_beer_match"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFineMatch"
            android:text="@string/tab_fine_player"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFinePlayer"
            android:text="@string/tab_fine_match"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </com.google.android.material.tabs.TabLayout>

    <com.jumbo.trus.CustomViewPager
        android:id="@+id/statisticsViewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.jumbo.trus.CustomViewPager>


</LinearLayout>